start page modified

--- a/pages/bio.html
+++ b/pages/bio.html
@@ -25,19 +25,12 @@
 <p>I am interested in BCI area (because of my Ph.D.). Also, I keep in touch with the Open Source community. I have experience with C++ and especially with Python. I program in Python for over 9 years and most of the projects I work on I try to develop in python.</p>
 </section>
         <section id="extras" class="body">
-                <div class="blogroll">
-                        <h2>links</h2>
-                        <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                        </ul>
-                </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="">Google+</a></li>
+                            <li><a href="https://github.com/rodrigohubner">GitHub</a></li>
+                            <li><a href="https://plus.google.com/+rodrigohubner1">Google+</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
